Modify access rules

--- a/project.config
+++ b/project.config
@@ -2,3 +2,18 @@
 	description = Applications to augment phosphor error logs with features from the openPOWER error format aka PEL
 [access]
 	inheritFrom = All-Projects
+[access "refs/heads/*"]
+	abandon = group github/openbmc/openpower-logging-maintainers
+	create = group github/openbmc/openpower-logging-maintainers
+	forgeCommitter = group github/openbmc/openpower-logging-maintainers
+	push = +force group github/openbmc/openpower-logging-maintainers
+	label-Code-Review = -2..+2 group github/openbmc/openpower-logging-maintainers
+	label-Ok-To-Test = +0..+1 group github/openbmc/openpower-logging-maintainers
+	label-Verified = -1..+1 group github/openbmc/openpower-logging-maintainers
+	rebase = group github/openbmc/openpower-logging-maintainers
+	submit = group github/openbmc/openpower-logging-maintainers
+	editTopicName = group github/openbmc/openpower-logging-maintainers
+[access "refs/tags/*"]
+	createTag = group github/openbmc/openpower-logging-maintainers
+	createSignedTag = group github/openbmc/openpower-logging-maintainers
+	push = +force group github/openbmc/openpower-logging-maintainers
