Modified project settings

--- a/project.config
+++ b/project.config
@@ -17,3 +17,5 @@
 	createTag = group github/openbmc/openpower-logging-maintainers
 	createSignedTag = group github/openbmc/openpower-logging-maintainers
 	push = +force group github/openbmc/openpower-logging-maintainers
+[submit]
+	action = rebase if necessary
