Update project configuration
This patch was automatically generated by openbmc-gerrit-admin.

Signed-off-by: Brad Bishop <bradleyb@fuzziesquirrel.com>

--- a/project.config
+++ b/project.config
@@ -1,7 +1,7 @@
 [project]
 	description = Applications to augment phosphor error logs with features from the openPOWER error format aka PEL
 [access]
-	inheritFrom = All-Projects
+	inheritFrom = openbmc-all-repos
 [access "refs/heads/*"]
 	abandon = group github/openbmc/openpower-logging-maintainers
 	create = group github/openbmc/openpower-logging-maintainers
